src/components/App/styles.scss
.root {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  min-height: 320px;
  background-color: #ffc100;
  color: #fff;
  text-align: center;

  h1 {
    margin-bottom: 0;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
      Helvetica, Arial, sans-serif !important;
    font-size: 24px !important;
    font-weight: normal !important;
    line-height: normal !important;
    letter-spacing: normal !important;
  }
}

// .worm {
//   width: 240px;
//   height: auto;
// }

:global {
  body {
    background-color: #e0ffff !important;
  }

  div[data-interactive-scrollout-root] > div > div.sgMpdhCf {
    position: fixed;
  }

  .Header-content h1 {
    display: none;
  }

  div[data-component="OdysseyParallax_App"] {
    background: #e0ffff;
  }

  .Header-media:after {
    // height: 8.25rem;
    background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0) 0%,
      #e0ffff 100%
    ) !important;
  }
}

